2.14 - ?
	- Improved release filter selection interface
	- Added Atom feeds for the recent announcements, changes and posts
	  (located in /www/feeds and updated every 15 min. by Multi::Feed)
	- Reverted to the old selection box date selector
	- Improved performance of update_vnpopularity() on PostgreSQL 9.0
	- Added WHEN clause to all SQL TRIGGERs for which it was useful
		(this *requires* PostgreSQL 9.0 or up!)
	- Added ON DELETE clause to all foreign keys referencing users (id)

2.13 - 2010-11-11
	- Added 'formcode' parameter to all modification requests to fix all
	  cross-site request forgery vulnerabilities
	- URL change: /u/logout => /u$id/logout
	- Added human confirmation question to the register page
	- Added "official" flag to vn<->vn relations
	- Display releases grouped by VNs on producer pages
	- Optimized SQL queries:
	  - dbScreenshotRandom()
	  - dbVNGet() with random ordering
	  - dbRevisionGet() (in most cases)
	- Removed (p###) from release resolution information
	- Replaced Algorithm::Diff::XS with Algorithm::Diff::Fast
	- Bugfix: delete/update all references when deleting a user
	- Bugfix: reverting a VN image now works

2.12 - 2010-11-03
	- !scr command for Multi::IRC
	- API: Added 'image' field to get vn
	- API: Slightly improved error messages
	- Re-added /g/debug (for moderators)
	- Improved search
	- Display friendly message in the VN edit scr tab when no release is known
	- Added 1024x576 and 1280x800 screen resolutions
	- Added more comparison VNs for the length field
	- Automatically remove read notifications after a month
	- Added Apple iProduct platform
	- Removed XML sitemap
	- Added image dimensions to screenshot thumbail <img> tags
	- Prefix all cookies with a configurable cookie_prefix
	- Automatically read L10N keys from script.js
	- Compressed the thread listing into one row per thread (instead of two)
	- Use newlines to separate aliases (except when displayed on VN pages)
	- Automatically remove duplicate aliases on /v+/edit