@@ -2,7 +2,7 @@
 /data/multi.pid
 /data/docs/8
 /data/log/
-/static/f/script.js
+/static/f/js/
 /static/feeds/
 /static/s/*/style.css
 /static/s/*/boxbg.png
