@@ -2,7 +2,8 @@
 	- Improved release filter selection interface
 	- Added Atom feeds for the recent announcements, changes and posts
 	  (located in /www/feeds and updated every 15 min. by Multi::Feed)
-	- Reverted to the old selection box date selector
+	- JS: Reverted to the old selection box date selector
+	- JS: Split script.js into a separate file for each language
 	- Improved performance of update_vnpopularity() on PostgreSQL 9.0
 	- Added WHEN clause to all SQL TRIGGERs for which it was useful
 		(this *requires* PostgreSQL 9.0 or up!)
